# Mynds_GhostFramework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ghost/: __init__.py
ghost/core/: console.py  device.py
ghost/modules/: activity.py  battery.py  download.py  keyboard.py  list.py  network.py  openurl.py  press.py  screenshot.py  shell.py  sleep.py  upload.py  wifi.py
tests/: conftest.py  test_console.py  test_device.py  test_integration.py  test_modules.py
