[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost"
version = "8.1.0"
description = "Ghost Framework is an Android post-exploitation framework that exploits the Android Debug Bridge to remotely access an Android device."
readme = "README.md"
requires-python = ">=3.7.0"
license = { file = "LICENSE" }
authors = [
  { name = "EntySec", email = "entysec@gmail.com" }
]
urls = { Homepage = "https://github.com/EntySec/Ghost" }

dependencies = [
  "adb-shell",
  "pex @ git+https://github.com/EntySec/Pex",
  "badges @ git+https://github.com/EntySec/Badges",
  "colorscript @ git+https://github.com/EntySec/ColorScript",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pexpect>=4.8",
]

[project.scripts]
ghost = "ghost.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=ghost --cov-report=term-missing"
markers = [
  "integration: end-to-end tests that drive the real CLI in a pty (pexpect)",
]

[tool.coverage.run]
source = ["ghost"]
omit = ["ghost/__main__.py", "ghost/cli.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
